# templatehoard-server

./: .gitignore  Cargo.toml
src/: common.rs  entries.rs  error.rs  html.rs  ipa.rs  main.rs  redirect.rs  templates.rs
static/: index.html  ipa.html  search.js  show-results.js  style.css  templates.html  test.html
