[package]
name = "templatehoard-server"
version = "0.1.0"
authors = ["Erutuon <5840197+Erutuon@users.noreply.github.com>"]
edition = "2018"

[dependencies]
markup = "0.4.1"
memmap = "0.7.0"
once_cell = "1.3.1"
regex = { version = "1.3.3", features = ["std"]}
rlua = "0.17.0"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11.1"
tokio = { version = "0.2.4", features = ["macros"] }
unicode-segmentation = "1.6.0"
warp = "0.2.1"