[package]
name = "templatehoard-server"
version = "0.1.0"
authors = ["Erutuon <5840197+Erutuon@users.noreply.github.com>"]
edition = "2018"

[dependencies]
env_logger = "0.7.1"
log = "0.4.8"
markup = "0.4.1"
matches = "0.1.8"
memmap = "0.7.0"
once_cell = "1.3.1"
regex = { version = "1.3.4", features = ["std"]}
rlua = "0.17.0"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11.1"
serde_urlencoded = "0.6"
tokio = { version = "0.2.4", features = ["macros"] }
unicase = "2.5.1"
unicode-segmentation = "1.6.0"
warp = "0.2.1"