[package]
name = "templatehoard-server"
version = "0.1.0"
authors = ["Erutuon <5840197+Erutuon@users.noreply.github.com>"]
edition = "2018"

[dependencies]
log = "0.4.8"
markup = "0.4.1"
matches = "0.1.8"
memmap = "0.7.0"
once_cell = "1.4.0"
regex = { version = "1.3.9", features = ["std"]}
rlua = "0.17.0"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11.1"
serde_json = "1.0.45"
serde_urlencoded = "0.6"
tokio = { version = "0.2.21", features = ["macros"] }
unicase = "2.6.0"
unicode-segmentation = "1.6.0"
warp = "0.2.3"
itertools = "0.9.0"
getopts = "0.2.21"
fern = "0.6.0"
chrono = "0.4.13"
